Closed Bug 78831 Opened 24 years ago Closed 24 years ago

resource: URLs can't load chrome: urls

Categories

(Core :: Security, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla0.9.1

People

(Reporter: pavlov, Assigned: security-bugs)

References

Details

(Whiteboard: fix in hand)

Attachments

(1 file)

Loading |about:| with images making a call to CheckLoadURI() causes the logo to not load. I expect this will happen in other places as well.
Keywords: mozilla0.9.1
Blocks: 69070
Whats the status of this? Is it going to make 0.9.1?
Attached patch FixSplinter Review
This is needed in order to turn on a security check for loading images (bug 69070). This would be good to have in 0.9.1. Without this patch, the security check breaks things.
Status: NEW → ASSIGNED
Whiteboard: fix in hand
Target Milestone: --- → mozilla0.9.1
r=pavlov
sr=brendan@mozilla.org. Have you considered using SchemeIs rather than GetScheme? /be
Brendan, Yes I did, but there's no gain in this case. SchemeIs saves a strcpy, but I think 2 strcpys are faster than 20 or so virtual function calls, which would be required if we used SchemeIs.
Fixed.
Really this time.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Okay, so if the about: page loads and the images* associated with it load as well, this bug is: Marked VERIFIED FIXED on: -MacOS91 2001-05-21-15-trunk -Win98SE 2001-05-22-06-trunk -LinRH62 2001-05-22-05-trunk * Image Logos for: - Netscape - Java - Support.com - Macromedia - RSA - Lernout & Hauspie - Net2Phone
Status: RESOLVED → VERIFIED
Blocks: 7266
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: