Fixing bug 78831 - treat chrome and resource URLs the same in the URL loading check and give them access to each other. r=pavlov,  sr=brendan. This allows us to turn on the fix (already reviewed) for 69070.